[package]
name = "poker_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
hyper = { version = "1.5.2", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
