[package]
name = "poker_api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-session = "3.0.0"
axum = {version = "0.8.1", features = ["macros", "ws"]}
axum-extra = { version = "0.10", features = ["cookie", "cookie-signed"  ] }
axum-sessions = "0.6.1"
bb8 = "0.9.0"
bb8-redis = "0.20.0"
bcrypt = "0.16.0"
cookie = "0.18.1"
dotenvy = "0.15.7"
futures-util = "0.3.31"
hyper = { version = "1.6.0", features = ["full"] }
redis = { version = "0.28.2", features = ["tokio-comp"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
uuid = { version = "1.12.1", features = ["serde", "v4"] }
